--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,7 +15,7 @@
     <input class="btn btn-primary btn-lg", type="submit" name="submit">
 </form><br>
 <video autoplay="autoplay" controls="controls">
-    <source src="{{url_for(display_video(),filename=filename)}}", type="video/mp4"></source>
+    <source src="{{url_for('display_video',filename=filename)}}", type="video/mp4"></source>
 </video><br>
 <h1>Video Processing</h1><hr>
 <h2>Select a video file to upload and Convert it into Black & White Video</h2><br>
